# pl_admin

./: BUGS_FIXED.md  CHANGELOG.md  COMPLETE_SETUP.md  FINAL_FIXES.md  IMPLEMENTATION_COMPLETE.md  QUICK_RESTART.txt  README.md  README_FIXES.md  SETUP_AND_RUN.md  SETUP_GUIDE.md
backend/: .env.example  backup_db.py  pyproject.toml  requirements.txt  restore_db.py  setup_db.py  setup_sample_data.py
backend/accounts/: emails.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/attendance/: admin.py  break_serializers.py  break_views.py  models.py  serializers.py  urls.py  views.py  wfh_serializers.py  wfh_views.py
backend/attendance/migrations/: 0001_initial.py  0002_remove_workfromhome_from_date_and_more.py  0003_breakrequest.py  0004_breakrequest_start_time_breakrequest_end_time.py
backend/candidates/: admin.py  models.py  serializers.py  urls.py  views.py
backend/clients/: admin.py  models.py  serializers.py  urls.py  views.py
backend/colleges/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/employees/: admin.py  models.py  serializers.py  urls.py  views.py
backend/internships/: admin.py  models.py  serializers.py  urls.py  views.py
backend/notifications/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/payroll/: admin.py  models.py  payslip_pdf.py  serializers.py  urls.py  utils.py  views.py
backend/reports/: urls.py  views.py
backend/tasks/: models.py  serializers.py  urls.py  views.py
(+48 files in other folders)
