[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-filter>=26.1",
    "django-jazzmin>=3.0.5",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=12.3.0",
    "reportlab>=5.0.0",
    "whitenoise>=6.12.0",
]
